--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "socket.io": "^4.4.1",
     "uuid": "^9.0.0"
   },
