--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build" : "npm install && cd .. && cd client && npm install && npm run build"
   },
   "author": "Amitkumar Srivastav",
   "license": "ISC",
